fix: improper calculation of scrolled, & news title overflow

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@ img{
 	padding: 1% 3%;
 	min-height: 87vh;
 }
+
+.Canvas{
+	margin-top: 3.9rem;
+	display: flex;
+	justify-content: center;
+	padding-bottom: 1.5%;
+}
+
 @media (max-width: 640px) { 
 	.Contain{
 		border-radius: 0;
@@ -22,11 +30,9 @@ img{
 		width: 100vw;
 		min-height: 95vh;
 	}
-}
-.Canvas{
-	margin-top: 4rem;
-	display: flex;
-	justify-content: center;
+	.Canvas{
+		padding-bottom: 0;
+	}
 }
 
 .App-up{
